--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 :root {
 --main-blue:#0075BE;
---secondary-blue: #3B4CCA;
---main-yellow: #FFDE00;
+--secondary-blue: #3b4cca;
+--main-yellow: #ffcb05;
 --secondary-yellow:#B3A125;
 --main-red: #FF0000;
 --secondary-red: #CC0000;
@@ -11,29 +11,52 @@
 
 body {
   font-size: 20px;
-  margin: 80px;
+  margin: 0px;
   text-align: center;
-  background-image: url('../img/smallback.png');
+  /*background-image: url('../img/smallback.png');*/
+  background-color: rgb(94, 87, 87);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
   height:100vh;
   font-family: "VT323", monospace;
 }
+header {
+background-color: rgba(26, 25, 25, 0.5);
+box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+}
+.header-div{
+display: flex;
+justify-content: center;
+align-items: center;
+grid-gap:-10px;
+margin: 0 auto;
+padding: 20px;background-color: rgba(26, 25, 25, 0.5);
+box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+}
+.pika {
+height:200px;
+width:auto;
+}
+.squirtle {
+height:180px;
+margin-top:15px;
+transition: transform 0.2s ease-in-out;
+}
+
+.pika:hover, .squirtle:hover {
+animation: wiggle 0.5s ease-in-out;
+}
+.pokeapi:hover {
+   transform: scale(1.1);
+}
+
 h1,h2{
-  text-align: center;
-  margin:0px;
+  margin:0px auto;
 }
 h1 {
   font-size: 150px;
   margin-bottom:20px;
-}
-.title, .catch-em{
-  background-color: black;
-  color:var(--white);
-  border-radius: 100px;
-  padding:0px 35px 5px 25px;
-  font-variant: small-caps;
 }
 .catch-em{
   font-size: 30px;
@@ -42,11 +65,13 @@ h1 {
 /*Button for Pokemon & List Grid*/
 ul{
   list-style-type: none;
+  margin-top:40px;
   display: grid;
-  grid-template-columns: 1fr 1fr; 
+  grid-template-columns: 1fr 1fr 1fr; 
   grid-gap:10px;
-  justify-items:center;
+  justify-content: center;
   margin:0 auto;
+  padding:0px;
   max-width:1200px;
 }
 .button-class {
@@ -55,8 +80,8 @@ ul{
   border: 10px solid var(--white);
   text-align: center;
   border-radius: 50%;
-  width: 250px;
-  height:250px;
+  width: 200px;
+  height:200px;
   min-height: 210px;
   text-transform: uppercase;
   margin: 10px auto;
@@ -64,22 +89,33 @@ ul{
   font-size: 25px;
   cursor:grab;
   transition: border 0.2s ease, font-size 0.2s ease;
+  box-shadow: 1px 5px 10px rgba(241, 226, 226, 0.6);
 }
 .button-class:hover,
 .button-class:focus {
-  border: 13px solid var(--grey);
-  font-size: 45px;
+  border: 10px solid var(--grey);
+  font-size: 40px;
   background-color:var(--main-red);
   color: white;
   border-radius: 50%;
   text-decoration: underline;
-  height: 280px;
-  width:280px;
+   transform: scale(1.2);
 } 
-.modal p{
-  border: 4px solid #ffcb05; /* Pokémon yellow border */
-  background-color: #3b4cca; /* Pokémon blue bg */
-  padding: 20px;
+.modal div{
+border:rgb(84, 79, 79) 5px solid;
+box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+background-color: rgb(232, 229, 229);
+border-radius: 10px;
+margin-left:20px;
+margin-right:20px;
+}
+.modal div:hover {
+  transform: scale(1.05);
+  transition: transform 0.5s ease-in-out;
+}
+.modal span{
+  padding: 10px;
+  text-shadow: 1px 5px 10px rgba(20, 16, 19, 0.3);
   margin: 20px auto;
   font-size:25px;
 }
@@ -96,11 +132,17 @@ ul{
   object-fit: contain;
   border: 4px solid #ffcb05; /* Pokémon yellow border */
   border-radius: 12px;
-  background-color: #3b4cca; /* Pokémon blue bg */
+  background-color: rgb(59, 76, 202,.85); 
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
   padding: 10px;
   margin: 20px auto 10px;
   display: block;
+  margin:30px auto;
+  border-radius: 20px;
+}
+.modal img:hover {
+  transform: scale(1.1);
+  transition: transform 0.3s ease;
 }
 /*MODAL STYLES*/
 #modal-container {
@@ -130,6 +172,7 @@ ul{
   width: 100%;
   max-width: 700px;
   text-align: center;
+  border-radius: 10px;
 }
 .modal-close {
  float: right;
@@ -180,5 +223,25 @@ display:none;}
 
   .pokemon-type, .pokemon-height {
     font-size: 18px; 
+  }
+}
+/* KEY FRAMES ANIMATION */
+@keyframes wiggle {
+  0% { transform: rotate(0deg); }
+  15% { transform: rotate(-5deg); }
+  30% { transform: rotate(5deg); }
+  45% { transform: rotate(-5deg); }
+  60% { transform: rotate(5deg); }
+  75% { transform: rotate(-5deg); }
+  100% { transform: rotate(0deg); }
+}
+@keyframes bounce {
+  0%, 100% {
+    top: 0;
+    animation-timing-function: ease-in;
+  }
+  50% {
+    top: 150px;
+    animation-timing-function: ease-out;
   }
 }
